--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,18 @@ before-install:
     
 scripts:
     - docker run vishwaspuri/docker-react-travis npm run test -- --coverage    
+
+deploy:
+    provider: elasticbeanstalk
+    region: "ap-south-1"
+    app: "docker-react"
+    env: "DockerReact-env"
+    bucket_name: "elasticbeanstalk-ap-south-1-845328738252"
+    bucket_path: "docker-react"
+    on:
+        branch: master
+    access_key_id: "$AWS_ACCESS_KEY"
+    secret_access_key:
+        secure: "$AWS_SECRET_KEY"
+
+        
