--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
     - docker
 
 before-install:
-    - docker build -t vishwaspuri/docker-react-travis Dockerfile.dev .
+    - docker build -t vishwaspuri/docker-react-travis -f Dockerfile.dev .
     
 scripts:
     - docker run vishwaspuri/docker-react-travis npm run test -- --coverage    
